--- a/app/templates/SPA.@layout.latte
+++ b/app/templates/SPA.@layout.latte
@@ -419,7 +419,7 @@
 							{include ./SPA/kendo-templates/panels-list.latte}
 						</div>
 					</div>
-					<div id="app-content">
+					<div id="app-content" class="k-content wide">
 						<div class="content-box">
 
 						</div>
