--- a/vendor-dev/legerete/spa-kendo-scheduler/nette-src/Components/templates/spa-scheduler.latte
+++ b/vendor-dev/legerete/spa-kendo-scheduler/nette-src/Components/templates/spa-scheduler.latte
@@ -1,11 +1,21 @@
 <script id="spa-view-scheduler" type="text/x-kendo-template" data-source-read="{plink :LeSpaScheduler:Scheduler:Scheduler: do=>read}" data-source-create="{plink :LeSpaScheduler:Scheduler:Scheduler: do=>create}" data-source-update="{plink :LeSpaScheduler:Scheduler:Scheduler: do=>update}" data-source-destroy="{plink :LeSpaScheduler:Scheduler:Scheduler: do=>destroy}">
-	<div data-role="scheduler"
-		data-views="[{ type: 'day', showWorkHours: true }, { type: 'week', showWorkHours: true, selected: true }, 'month', 'agenda']"
-		data-bind="source: tasks,
-			visible: isVisible, events: {
-				navigate: navigate
-			}"
-		data-first-day="1"
-		>
+
+	<div class="row">
+		<div style="width: 225px" class="pull-left">
+			<div data-role="calendar"
+			     data-bind=""
+			></div>
+		</div>
+		<div style="width: calc(100% - 225px)" class="pull-left">
+			<div data-role="scheduler"
+				data-views="[{ type: 'day', showWorkHours: true }, { type: 'week', showWorkHours: true, selected: true }, 'month', 'agenda']"
+				data-bind="source: tasks,
+					visible: isVisible, events: {
+						navigate: navigate
+					}"
+				data-first-day="1"
+				>
+			</div>
+		</div>
 	</div>
 </script>
