--- a/vendor-dev/legerete/spa-kendo-user/nette-src/Components/templates/spa-user.latte
+++ b/vendor-dev/legerete/spa-kendo-user/nette-src/Components/templates/spa-user.latte
@@ -107,8 +107,8 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="row">
-					<div class="col-lg-12">
-						<ul class="list-group row list-group-icons">
+					<div class="col-lg-16">
+						<ul class="list-group row">
 
 							{*
 							 * User personsl informations panel tab
@@ -127,16 +127,6 @@
 								<a href="#user-security" data-toggle="tab" class="list-group-item">
 									<i class="glyph-icon icon-lock"></i>
 									{_users.user.security}
-								</a>
-							</li>
-
-							{*
-							 * Application settings panel tab
-							 *}
-							<li class="col-md-3">
-								<a href="#user-application-settings" data-toggle="tab" class="list-group-item">
-									<i class="glyph-icon icon-sliders"></i>
-									{_users.user.application-settings}
 								</a>
 							</li>
 						</ul>
@@ -325,15 +315,6 @@
 										</div>
 									</form>
 								</div>
-							</div>
-						</div>
-
-						{*
-						 * Application settings panel content
-						 *}
-						<div class="tab-pane fade" id="user-application-settings">
-							<div class="content-box row">
-
 							</div>
 						</div>
 					</div>
