--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -12,6 +12,14 @@
 	<link rel="stylesheet" href="{$basePath}/assets/css/all.min.css{resourceVersion}">
 	<meta name="viewport" content="width=device-width">
 	{block head}{/block}
+		{block scripts}
+		{*<script src="http://code.jquery.com/jquery-1.12.3.min.js"></script>*}
+		<script src="{$basePath}/assets/js/all.min.js{resourceVersion}"></script>
+		<script src="http://kendo.cdn.telerik.com/2016.3.1118/js/kendo.all.min.js"></script>
+			{*<script src="{$basePath}/kendo/kendo.all.min.js{resourceVersion}"></script>*}
+			<script src="{$basePath}/kendo/kendo.timezones.min.js{resourceVersion}"></script>
+			{*<script src="{$basePath}/assets/js/dev.js{resourceVersion}"></script>*}
+		{/block}
 </head>
 
 <body>
@@ -20,9 +28,6 @@
 
 		{include content}
 
-		{block scripts}
-		<script src="{$basePath}/assets/js/all.min.js{resourceVersion}"></script>
-		{/block}
 	</div>
 </body>
 </html>
