--- a/websrc/stylesheets/common/_colors.scss
+++ b/websrc/stylesheets/common/_colors.scss
@@ -11,8 +11,10 @@ $color-success: #4CAF50;
 $color-success-darken: darken($color-success, 10%);
 $color-bg-primary: #FFFFFF;
 $color-bg-secondary: #F4F5F7;
+$color-bg-dark: #272821;
 $color-overlay-default: #000000;
 $color-widgets-bg-secondary: #f5f5f5;
+$color-porta-gold: #D0AA55;
 
 // Buttons
 $color-button-text-default: #555a60;
