IM release prepare

--- a/app/templates/SPA/snippets/left-menu.latte
+++ b/app/templates/SPA/snippets/left-menu.latte
@@ -19,41 +19,41 @@
 		</a>
 	</li>
 	<li class="header"><span>{_left-menu.bussiness}</span></li>
-	<li>
-		<a href="#">
-			<i class="glyph-icon icon-home"></i>
-			<span>{_left-menu.offer}</span>
-		</a>
-	</li>
-	<li>
-		<a href="#">
-			<i class="glyph-icon icon-home"></i>
-			<span>{_left-menu.request}</span>
-		</a>
-	</li>
-	<li>
-		<a href="#">
-			<i class="glyph-icon icon-group"></i>
-			<span>{_left-menu.clients}</span>
-		</a>
-	</li>
+	{*<li>*}
+		{*<a href="#">*}
+			{*<i class="glyph-icon icon-home"></i>*}
+			{*<span>{_left-menu.offer}</span>*}
+		{*</a>*}
+	{*</li>*}
+	{*<li>*}
+		{*<a href="#">*}
+			{*<i class="glyph-icon icon-home"></i>*}
+			{*<span>{_left-menu.request}</span>*}
+		{*</a>*}
+	{*</li>*}
+	{*<li>*}
+		{*<a href="#">*}
+			{*<i class="glyph-icon icon-group"></i>*}
+			{*<span>{_left-menu.clients}</span>*}
+		{*</a>*}
+	{*</li>*}
 	<li>
 		<a data-bind="click: openPanel" data-panel-type="information-memorandum-edit" href="#">
 			<i class="glyph-icon icon-elusive-website"></i>
 			<span>{_left-menu.im}</span>
 		</a>
 	</li>
-	<li class="header"><span>{_left-menu.planning}</span></li>
-	<li>
-		<a data-bind="click: openPanel" data-panel-type="scheduler" href="#">
-			<i class="glyph-icon icon-calendar"></i>
-			<span>{_left-menu.calendar} <span data-toggle="tooltip" data-placement="top" title="{_left-menu.upcoming-events}" class="bs-badge badge-info" data-bind="text: data.todosCount, visible: data.todosCount">0</span></span>
-		</a>
-	</li>
-	<li>
-		<a href="#">
-			<i class="glyph-icon icon-check-square-o"></i>
-			<span>{_left-menu.todos}</span><span data-toggle="tooltip" data-placement="top" title="{_left-menu.unresolved-todos}" class="bs-badge badge-info" data-bind="text: data.todosCount, visible: data.todosCount">0</span>
-		</a>
-	</li>
+	{*<li class="header"><span>{_left-menu.planning}</span></li>*}
+	{*<li>*}
+		{*<a data-bind="click: openPanel" data-panel-type="scheduler" href="#">*}
+			{*<i class="glyph-icon icon-calendar"></i>*}
+			{*<span>{_left-menu.calendar} <span data-toggle="tooltip" data-placement="top" title="{_left-menu.upcoming-events}" class="bs-badge badge-info" data-bind="text: data.todosCount, visible: data.todosCount">0</span></span>*}
+		{*</a>*}
+	{*</li>*}
+	{*<li>*}
+		{*<a href="#">*}
+			{*<i class="glyph-icon icon-check-square-o"></i>*}
+			{*<span>{_left-menu.todos}</span><span data-toggle="tooltip" data-placement="top" title="{_left-menu.unresolved-todos}" class="bs-badge badge-info" data-bind="text: data.todosCount, visible: data.todosCount">0</span>*}
+		{*</a>*}
+	{*</li>*}
 </ul>
