--- a/app/templates/SPA/snippets/header-nav-right.latte
+++ b/app/templates/SPA/snippets/header-nav-right.latte
@@ -13,128 +13,128 @@
 		</div>
 	</div>
 
-	<a data-bind="events: { click: clickOnChatSidebar}" href="#" class="hdr-btn sb-toggle-left" id="chatbox-btn" title="Chat sidebar">
-		<i class="glyph-icon icon-linecons-paper-plane"></i>
-	</a>
+	{*<a data-bind="events: { click: clickOnChatSidebar}" href="#" class="hdr-btn sb-toggle-left" id="chatbox-btn" title="Chat sidebar">*}
+		{*<i class="glyph-icon icon-linecons-paper-plane"></i>*}
+	{*</a>*}
 
-	<div data-bind="events: { click: clickOnNotifications}" class="dropdown" id="notifications-btn">
-		<a data-toggle="dropdown" href="#" title="">
-			<span class="small-badge bg-yellow"></span>
-			<i class="glyph-icon icon-linecons-megaphone"></i>
-		</a>
-		<div class="dropdown-menu box-md float-left">
+	{*<div data-bind="events: { click: clickOnNotifications}" class="dropdown" id="notifications-btn">*}
+		{*<a data-toggle="dropdown" href="#" title="">*}
+			{*<span class="small-badge bg-yellow"></span>*}
+			{*<i class="glyph-icon icon-linecons-megaphone"></i>*}
+		{*</a>*}
+		{*<div class="dropdown-menu box-md float-left">*}
 
-			<div class="popover-title display-block clearfix pad10A">
-				Notifications
-				<a class="text-transform-cap font-primary font-normal btn-link float-right" href="#" title="View more options">
-					More options...
-				</a>
-			</div>
-			<div class="scrollable-content scrollable-slim-box">
-				<ul class="no-border notifications-box">
-					<li>
-						<span class="bg-danger icon-notification glyph-icon icon-bullhorn"></span>
-						<span class="notification-text">This is an error notification</span>
-						<div class="notification-time">
-							a few seconds ago
-							<span class="glyph-icon icon-clock-o"></span>
-						</div>
-					</li>
-					<li>
-						<span class="bg-warning icon-notification glyph-icon icon-users"></span>
-						<span class="notification-text font-blue">This is a warning notification</span>
-						<div class="notification-time">
-							<b>15</b> minutes ago
-							<span class="glyph-icon icon-clock-o"></span>
-						</div>
-					</li>
-					<li>
-						<span class="bg-green icon-notification glyph-icon icon-sitemap"></span>
-						<span class="notification-text font-green">A success message example.</span>
-						<div class="notification-time">
-							<b>2 hours</b> ago
-							<span class="glyph-icon icon-clock-o"></span>
-						</div>
-					</li>
-					<li>
-						<span class="bg-azure icon-notification glyph-icon icon-random"></span>
-						<span class="notification-text">This is an error notification</span>
-						<div class="notification-time">
-							a few seconds ago
-							<span class="glyph-icon icon-clock-o"></span>
-						</div>
-					</li>
-					<li>
-						<span class="bg-warning icon-notification glyph-icon icon-ticket"></span>
-						<span class="notification-text">This is a warning notification</span>
-						<div class="notification-time">
-							<b>15</b> minutes ago
-							<span class="glyph-icon icon-clock-o"></span>
-						</div>
-					</li>
-					<li>
-						<span class="bg-blue icon-notification glyph-icon icon-user"></span>
-						<span class="notification-text font-blue">Alternate notification styling.</span>
-						<div class="notification-time">
-							<b>2 hours</b> ago
-							<span class="glyph-icon icon-clock-o"></span>
-						</div>
-					</li>
-					<li>
-						<span class="bg-purple icon-notification glyph-icon icon-user"></span>
-						<span class="notification-text">This is an error notification</span>
-						<div class="notification-time">
-							a few seconds ago
-							<span class="glyph-icon icon-clock-o"></span>
-						</div>
-					</li>
-					<li>
-						<span class="bg-warning icon-notification glyph-icon icon-user"></span>
-						<span class="notification-text">This is a warning notification</span>
-						<div class="notification-time">
-							<b>15</b> minutes ago
-							<span class="glyph-icon icon-clock-o"></span>
-						</div>
-					</li>
-					<li>
-						<span class="bg-green icon-notification glyph-icon icon-user"></span>
-						<span class="notification-text font-green">A success message example.</span>
-						<div class="notification-time">
-							<b>2 hours</b> ago
-							<span class="glyph-icon icon-clock-o"></span>
-						</div>
-					</li>
-					<li>
-						<span class="bg-purple icon-notification glyph-icon icon-user"></span>
-						<span class="notification-text">This is an error notification</span>
-						<div class="notification-time">
-							a few seconds ago
-							<span class="glyph-icon icon-clock-o"></span>
-						</div>
-					</li>
-					<li>
-						<span class="bg-warning icon-notification glyph-icon icon-user"></span>
-						<span class="notification-text">This is a warning notification</span>
-						<div class="notification-time">
-							<b>15</b> minutes ago
-							<span class="glyph-icon icon-clock-o"></span>
-						</div>
-					</li>
-				</ul>
-			</div>
-			<div class="button-pane button-pane-alt pad5T pad5L pad5R text-center">
-				<a href="#" class="btn btn-flat btn-primary" title="View all notifications">
-					View all notifications
-				</a>
-			</div>
-		</div>
-	</div>
+			{*<div class="popover-title display-block clearfix pad10A">*}
+				{*Notifications*}
+				{*<a class="text-transform-cap font-primary font-normal btn-link float-right" href="#" title="View more options">*}
+					{*More options...*}
+				{*</a>*}
+			{*</div>*}
+			{*<div class="scrollable-content scrollable-slim-box">*}
+				{*<ul class="no-border notifications-box">*}
+					{*<li>*}
+						{*<span class="bg-danger icon-notification glyph-icon icon-bullhorn"></span>*}
+						{*<span class="notification-text">This is an error notification</span>*}
+						{*<div class="notification-time">*}
+							{*a few seconds ago*}
+							{*<span class="glyph-icon icon-clock-o"></span>*}
+						{*</div>*}
+					{*</li>*}
+					{*<li>*}
+						{*<span class="bg-warning icon-notification glyph-icon icon-users"></span>*}
+						{*<span class="notification-text font-blue">This is a warning notification</span>*}
+						{*<div class="notification-time">*}
+							{*<b>15</b> minutes ago*}
+							{*<span class="glyph-icon icon-clock-o"></span>*}
+						{*</div>*}
+					{*</li>*}
+					{*<li>*}
+						{*<span class="bg-green icon-notification glyph-icon icon-sitemap"></span>*}
+						{*<span class="notification-text font-green">A success message example.</span>*}
+						{*<div class="notification-time">*}
+							{*<b>2 hours</b> ago*}
+							{*<span class="glyph-icon icon-clock-o"></span>*}
+						{*</div>*}
+					{*</li>*}
+					{*<li>*}
+						{*<span class="bg-azure icon-notification glyph-icon icon-random"></span>*}
+						{*<span class="notification-text">This is an error notification</span>*}
+						{*<div class="notification-time">*}
+							{*a few seconds ago*}
+							{*<span class="glyph-icon icon-clock-o"></span>*}
+						{*</div>*}
+					{*</li>*}
+					{*<li>*}
+						{*<span class="bg-warning icon-notification glyph-icon icon-ticket"></span>*}
+						{*<span class="notification-text">This is a warning notification</span>*}
+						{*<div class="notification-time">*}
+							{*<b>15</b> minutes ago*}
+							{*<span class="glyph-icon icon-clock-o"></span>*}
+						{*</div>*}
+					{*</li>*}
+					{*<li>*}
+						{*<span class="bg-blue icon-notification glyph-icon icon-user"></span>*}
+						{*<span class="notification-text font-blue">Alternate notification styling.</span>*}
+						{*<div class="notification-time">*}
+							{*<b>2 hours</b> ago*}
+							{*<span class="glyph-icon icon-clock-o"></span>*}
+						{*</div>*}
+					{*</li>*}
+					{*<li>*}
+						{*<span class="bg-purple icon-notification glyph-icon icon-user"></span>*}
+						{*<span class="notification-text">This is an error notification</span>*}
+						{*<div class="notification-time">*}
+							{*a few seconds ago*}
+							{*<span class="glyph-icon icon-clock-o"></span>*}
+						{*</div>*}
+					{*</li>*}
+					{*<li>*}
+						{*<span class="bg-warning icon-notification glyph-icon icon-user"></span>*}
+						{*<span class="notification-text">This is a warning notification</span>*}
+						{*<div class="notification-time">*}
+							{*<b>15</b> minutes ago*}
+							{*<span class="glyph-icon icon-clock-o"></span>*}
+						{*</div>*}
+					{*</li>*}
+					{*<li>*}
+						{*<span class="bg-green icon-notification glyph-icon icon-user"></span>*}
+						{*<span class="notification-text font-green">A success message example.</span>*}
+						{*<div class="notification-time">*}
+							{*<b>2 hours</b> ago*}
+							{*<span class="glyph-icon icon-clock-o"></span>*}
+						{*</div>*}
+					{*</li>*}
+					{*<li>*}
+						{*<span class="bg-purple icon-notification glyph-icon icon-user"></span>*}
+						{*<span class="notification-text">This is an error notification</span>*}
+						{*<div class="notification-time">*}
+							{*a few seconds ago*}
+							{*<span class="glyph-icon icon-clock-o"></span>*}
+						{*</div>*}
+					{*</li>*}
+					{*<li>*}
+						{*<span class="bg-warning icon-notification glyph-icon icon-user"></span>*}
+						{*<span class="notification-text">This is a warning notification</span>*}
+						{*<div class="notification-time">*}
+							{*<b>15</b> minutes ago*}
+							{*<span class="glyph-icon icon-clock-o"></span>*}
+						{*</div>*}
+					{*</li>*}
+				{*</ul>*}
+			{*</div>*}
+			{*<div class="button-pane button-pane-alt pad5T pad5L pad5R text-center">*}
+				{*<a href="#" class="btn btn-flat btn-primary" title="View all notifications">*}
+					{*View all notifications*}
+				{*</a>*}
+			{*</div>*}
+		{*</div>*}
+	{*</div>*}
 
-	<div data-bind="events: { click: clickOnStatistics}" class="dropdown" id="cloud-btn">
-		<a href="#" data-placement="bottom" class="tooltip-button sb-toggle-right" title="Statistics">
-			<i class="glyph-icon icon-area-chart"></i>
-		</a>
-	</div>
+	{*<div data-bind="events: { click: clickOnStatistics}" class="dropdown" id="cloud-btn">*}
+		{*<a href="#" data-placement="bottom" class="tooltip-button sb-toggle-right" title="Statistics">*}
+			{*<i class="glyph-icon icon-area-chart"></i>*}
+		{*</a>*}
+	{*</div>*}
 
 	<a data-bind="events: { click: toggleFullScreen}" href="#" class="hdr-btn" id="fullscreen" title="Toggle fullscreen">
 		<i class="glyph-icon icon-iconic-resize-full"></i>
