--- a/vendor-dev/legerete/spa-kendo-acl/nette-src/Components/templates/spa-acl.latte
+++ b/vendor-dev/legerete/spa-kendo-acl/nette-src/Components/templates/spa-acl.latte
@@ -14,14 +14,14 @@
 		data-toolbar="[{
 					name: 'create',
 					text: '{_acl.role.create}',
-					template: '<div class=\'btn btn-success btn-xs k-grid-add\'><span class=\'glyph-icon icon-plus\'></span> {_acl.role.create}</div>'
+					template: '&lt;div class=\'btn btn-success btn-xs k-grid-add\'&gt;&lt;span class=\'glyph-icon icon-plus\'&gt;&lt;/span&gt; {_acl.role.create}&lt;/div&gt;'
 				}]"
 		data-columns="[
 			{
 				field: 'update',
 				width: 70,
 				title: '{_acl.role.save}',
-				template: '<div data-bind=\'visible: edited\' data-role=\'update\' class=\'btn btn-success btn-xs k-grid-save-changes\'><span class=\'glyph-icon icon-save\'>  {_acl.role.save}</div>',
+				template: '&lt;div data-bind=\'visible: edited\' data-role=\'update\' class=\'btn btn-success btn-xs k-grid-save-changes\'&gt;&lt;span class=\'glyph-icon icon-save\'&gt;  {_acl.role.save}&lt;/div&gt;',
 			},
 			{
 				field: 'title',
