--- a/websrc/stylesheets/main.scss
+++ b/websrc/stylesheets/main.scss
@@ -520,8 +520,8 @@ html {
 
       .k-content {
         margin: 9px;
-        width: 151px;
-        height: 210px;
+        width: 120px;
+        height: 172px;
         float: left;
         border: 2px solid $color-bg-dark;
         border-radius: 1px;
@@ -546,11 +546,59 @@ html {
   background-color: #666666;
   margin: -15px;
 
+  .k-widget, .k-widget.k-editor-inline {
+    border: 0 !important;
+    padding: 0;
+  }
+
   #page-editor {
     width: 596px;
     height: 842px;
     background: #ffffff;
     box-shadow: 5px 5px 10px 5px #333;
+    position: relative;
+
+    .image-box {
+      background-color: #666;
+
+      .k-widget {
+
+        &.k-upload {
+          position: absolute;
+          background: transparent;
+          width: 556px;
+          height: inherit;
+
+          .k-dropzone {
+            height: inherit;
+            width: 100%;
+            padding: 0;
+
+            &.k-dropzone-hovered {
+              background: transparent;
+            }
+          }
+
+          .k-upload-status {
+            display: none;
+          }
+        }
+      }
+    }
+
+    .toolbar {
+      position: absolute;
+      right: -60px;
+      width: 60px;
+      padding: 10px;
+      background-color: #fff;
+      border-radius: 0px 2px 2px 0px;
+      box-shadow: 8px 10px 10px 0px #333;
+
+      a:first-child {
+        margin-bottom: 10px;
+      }
+    }
   }
 
   .content-box-header {
@@ -578,6 +626,14 @@ html {
     }
   }
 
+  .page {
+    font-size: 10px;
+
+    & * {
+      font-family: "Times New Roman", Helvetica !important;
+    }
+  }
+
   &>.row>.col-lg-12 {
     background-color: $color-bg-secondary;
   }
@@ -588,6 +644,10 @@ html {
     margin: 0;
     background-color: $color-bg-secondary;
 
+    .k-widget.k-upload {
+      display: none;
+    }
+
     div.page {
       border: 0;
       border-radius: 0;
@@ -597,6 +657,36 @@ html {
       background-color: #fff;
       position: relative;
       margin-bottom: 20px;
+
+      & * {
+        box-sizing: border-box;
+      }
+
+      .over {
+        width: 596px;
+        height: 842px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 15;
+        background-color: transparent;
+      }
+
+      .toolbar {
+        transform: scale(4);
+        width: 148px;
+        position: absolute;
+        top: 50px;
+        left: 224px;
+        z-index: 20;
+        visibility: hidden;
+      }
+
+      &:hover {
+        .toolbar {
+          visibility: visible;
+        }
+      }
 
       &:last-child {
         border-bottom: 0;
@@ -695,18 +785,27 @@ html {
   }
 }
 
-.im-pagelayout-cover, .k-pdf-export .im-pagelayout-cover {
-  &.logo {
+.im-pagelayout {
+  padding: 20px;
+
+  .logo {
     background-image: url('/assets/images/logo.png');
     background-repeat: no-repeat;
     width: 356px;
     height: 67px;
-    position: absolute;
-    right: 20px;
-    top: 20px;
+    float: right;
   }
 
-  &.document-name {
+  .footer {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    left: 30px;
+  }
+}
+
+.im-pagelayout-cover, .k-pdf-export .im-pagelayout-cover {
+  .document-name {
     color: $color-porta-gold;
     position: absolute;
     right: 20px;
@@ -714,7 +813,7 @@ html {
     font-weight: bold;
   }
 
-  &.offer-number {
+  .offer-number {
     position: absolute;
     left: 20px;
     font-weight: bold;
@@ -722,7 +821,7 @@ html {
     top: 590px;
   }
 
-  &.offer-address-street {
+  .offer-address-street {
     position: absolute;
     left: 20px;
     font-weight: bold;
@@ -730,17 +829,41 @@ html {
     top: 620px;
   }
 
-  &.offer-address {
+  .offer-address {
     position: absolute;
     left: 20px;
     font-weight: bold;
     font-size: 23px;
     top: 670px;
   }
+
+  .cover-image-wrapper {
+    width: 100%;
+    height: 420px;
+    max-height: 420px;
+    margin-top: 20px;
+
+    img {
+      width: 100%;
+    }
+  }
 }
 
 .im-pagelayout-table {
   padding: 20px;
+
+  .before-table-image-wrapper {
+    margin-top: 20px;
+    width: 100%;
+    height: 200px;
+    margin-bottom: 20px;
+    overflow: hidden;
+    display: block;
+
+    img {
+      width: 100%;
+    }
+  }
 
   table {
     border-spacing: 3px;
